?? ??? 2019, PHP 7.2.20

- Core:
  . Fixed bug #76980 (Interface gets skipped if autoloader throws an exception).
    (Nikita)

- DOM:
  . Fixed bug #78025 (segfault when accessing properties of DOMDocumentType).
    (cmb)

- MySQLi:
  . Fixed bug #77956 (When mysqli.allow_local_infile = Off, use a meaningful
    error message). (Sjon Hortensius)
  . Fixed bug #38546 (bindParam incorrect processing of bool types).
    (camporter)

- OpenSSL:
  . Fixed bug #78079 (openssl_encrypt_ccm.phpt fails with OpenSSL 1.1.1c).
    (Jakub Zelenka)

- Sockets:
  . Fixed bug #78038 (Socket_select fails when resource array contains
    references). (Nikita)

- Zip:
  . Fixed bug #76345 (zip.h not found). (Michael Maroszek)

30 May 2019, PHP 7.2.19

- EXIF:
  . Fixed bug #77988 (heap-buffer-overflow on php_jpg_get16).
    (CVE-2019-11040) (Stas)

- FPM:
  . Fixed bug #77934 (php-fpm kill -USR2 not working). (Jakub Zelenka)
  . Fixed bug #77921 (static.php.net doesn't work anymore). (Peter Kokot)

- GD:
  . Fixed bug #77943 (imageantialias($image, false); does not work). (cmb)
  . Fixed bug #77973 (Uninitialized read in gdImageCreateFromXbm).
    (CVE-2019-11038) (cmb)

- Iconv:
  . Fixed bug #78069 (Out-of-bounds read in iconv.c:_php_iconv_mime_decode()
    due to integer overflow). (CVE-2019-11039). (maris dot adam)

- JSON:
  . Fixed bug #77843 (Use after free with json serializer). (Nikita)

- Opcache:
  . Fixed possible crashes, because of inconsistent PCRE cache and opcache
    SHM reset. (Alexey Kalinin, Dmitry)

- PDO_MySQL:
  . Fixed bug #77944 (Wrong meta pdo_type for bigint on LLP64). (cmb)

- Reflection:
  . Fixed bug #75186 (Inconsistent reflection of Closure:::__invoke()). (Nikita)

- Session:
  . Fixed bug #77911 (Wrong warning for session.sid_bits_per_character). (cmb)

- SPL:
  . Fixed bug #77024 (SplFileObject::__toString() may return array). (Craig
    Duncan)

- SQLite:
  . Fixed bug #77967 (Bypassing open_basedir restrictions via file uris). (Stas)
